--- a/Parte1/css/main.css
+++ b/Parte1/css/main.css
@@ -31,3 +31,16 @@
 }
 width: 950px;
 	border: 1px solid black;
+
+p{
+    color: green;
+    font-family: cursive;
+    font-size: 20px;
+    text-align: center;
+    }
+
+a {  text-align: center;
+    font-family: cursive;
+    font-size: 20px;
+    color: purple;
+}
