--- a/Parte4/css/main.css
+++ b/Parte4/css/main.css
@@ -7,19 +7,21 @@ body{
   	height:120px;
   	width:120px;
   	background-color: yellow;
-  	
+  	overflow: auto;
   	}
 
   .dos {
   	height:120px;
   	width:120px;
   	background-color: dodgerblue;
+      overflow: auto;
   }
 
   .tres {
   	height:120px;
   	width:120px;
   	background-color: crimson;
+      overflow: auto;
 }
 .padre {
     width: 600px;
@@ -31,7 +33,13 @@ body{
 
     
 p{
-    font-family: sans-serif;
-    font-size: 18px;
-    color: crimson;
+    color: green;
+    font-family: cursive;
+    font-size: 20px;
+    text-align: center;
+}
+a {  text-align: center;
+    font-family: cursive;
+    font-size: 20px;
+    color: purple;
 }
