--- a/css/main.css
+++ b/css/main.css
@@ -6,25 +6,29 @@ h1{
     
 }
 p{
-    color: forestgreen;
+    color: green;
     font-family: cursive;
-    font-size: 18px;
+    font-size: 20px;
     text-align: center;
     
 }
 a {  text-align: center;
     font-family: cursive;
-    font-size: 15px;
+    font-size: 20px;
     color: violet;
-    text-align: center;
-
-}
+    
+	
+	
 div {
    
-    height: 120px;
-    border: solid 2px red;
-    align-content: center
-   
+      
+   width: 600px;
+    height: 360px;
+    border: 1px blue solid;
+    float: right;  
     
-    
+}
+
+.caja{
+	display: block;
 }
