--- a/Parte1/css/main.css
+++ b/Parte1/css/main.css
@@ -27,10 +27,9 @@
     border: 1px blue solid;
     float: block;
     width: 950px;
-	border: 1px solid black;
+	border: 1px solid blue;
 }
-width: 950px;
-	border: 1px solid black;
+
 
 p{
     color: green;
